# JDSP4Linux

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  DSPFilter.xls  DSPFilter.xlsx  Dockerfile  INSTALL_PULSE.md  JDSP4Linux-GUI.pro  JDSP4Linux-GUI.pro.user.68d7fda  JDSP4Linux.pro  JDSP4Linux.pro.user.e371b16  LICENSE  LICENSE.md  RBJ_Eq.xls  README.md  audio.conf  configlist.h  crowdin.yml  ddc.qrc  http.pri  jdsp  linksRegardingDatatype.txt  log.cpp  log.h  log.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nohup.out  notes.txt  palette.cpp  palette.h  palette.ui  preset.cpp  (+9 more)
DSPManager/: AndroidManifest.xml
DSPManager_12_band_Lollipop/: Android.mk
DSPManager_12_band_Marshmallow/: Android.mk
DSPManager_12_band_Marshmallow_Reverb/: Android.mk
DSPManager_12_band_Nougat/: AndroidManifest.xml
DSPManager_8_14_band_Lollipop/: Android.mk
DSPManager_8_14_band_Marshmallow/: Android.mk
DSPManager_8band_Marshmallow/: Android.mk
DSPManager_Free/: .project  proguard.txt
DSPManager_KitKat/: Android.mk
DSPManager_Lollipop/: .project  AndroidManifest.xml  project.properties
DSPManager_Lollipop_Marshmallow_Nougat/: .project  AndroidManifest.xml  proguard.txt  project.properties
DSPManager_Marshmallow_Nougat/: .project  AndroidManifest.xml
EqualizerDebugLogs/: Time_used_armeabi-v7a.txt  Time_used_x86.txt
Main/: README.md
Misc/: audio_effects_no_bundlewrapper.conf  firgen.c  reverbHeap.cpp
Tutorials/: Android_Build_Release.bat  LICENSE  README.md
VeryOldOpen_source_edition/: README.md
ViPERToolBox/: AssemblyInfo.cs
bench/: run.cpp
cmake/: QtPromiseAddTest.cmake
config/: appconfigwrapper.cpp  appconfigwrapper.h  configconverter.cpp  configconverter.h  container.cpp  container.h  dbusproxy.cpp  dbusproxy.h  io.cpp  io.h
crashhandler/: airbag.h  safecall.h  stacktrace.h
(+1992 files in other folders)
